--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
   <div id="intro-container">
     <div id="intro-richard-walker">
-      <img id="intro-richard-img" src="yourbossvar/district.manager-boss.png" alt="District Manager Rich">
+      <img id="intro-richard-img-a" src="yourbossvar/boss-crossing.png" alt="Boss">
+      <img id="intro-richard-img-b" src="yourbossvar/boss-pointing.png" alt="Boss">
     </div>
     <button id="start-intro-btn" class="vapor-btn" style="display:none;">INITIALIZE SYSTEM</button>
     <div id="yt-player" style="display:none; width:100%; height:100%; pointer-events:none;"></div>
