--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="boss-char-wrapper" id="companion-wrapper">
             <span class="boss-char-name" id="companion-name">Security Larry</span>
             <div class="boss-char-inner">
-              <img id="companion-image" src="chars/larry_frame1.png" alt="Companion">
+              <img id="companion-image" src="assets/chars/larry_frame1.png" alt="Companion">
               <img id="companion-hit-layer" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="">
             </div>
           </div>
@@ -79,7 +79,7 @@
           <div class="boss-char-wrapper" id="boss-wrapper">
             <span class="boss-char-name" id="main-boss-name">VP Dave</span>
             <div class="boss-char-inner">
-              <img id="boss-image" src="phases/dave/dave_phase1.png" alt="Main Boss">
+              <img id="boss-image" src="assets/phases/dave/dave_phase1.png" alt="Main Boss">
               <img id="boss-hit-layer" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="">
             </div>
           </div>
@@ -166,7 +166,7 @@
 
       <div class="instructor-inner">
         <div class="instructor-char-side">
-          <img id="mikita-char-img" src="chars/mikita_instructor.png" alt="Mikita">
+          <img id="mikita-char-img" src="assets/chars/mikita_instructor.png" alt="Mikita">
           <span class="instructor-char-name">Supply-Chain Mgr<br>Mikita</span>
         </div>
 
@@ -199,7 +199,7 @@
       
       <div class="phish-header">
         <div style="display:flex; align-items:center; gap:12px;">
-          <img id="mikita-char-img" src="chars/mikita_idle.png" alt="Mikita" style="height:56px; width:auto; image-rendering:pixelated;">
+          <img id="mikita-char-img" src="assets/chars/mikita_idle.png" alt="Mikita" style="height:56px; width:auto; image-rendering:pixelated;">
           <h2 class="phish-title">🎣 INBOX INSPECTOR</h2>
         </div>
         <div class="phish-stats">SCORE: <span id="phish-score">0 / 6</span></div>
@@ -234,7 +234,7 @@
     <div class="stress-test-box">
 
       <div class="stress-header">
-        <img src="chars/manny_frame1.png" id="manny-char-img" class="stress-manny-img" alt="Manny">
+        <img src="assets/chars/manny_frame1.png" id="manny-char-img" class="stress-manny-img" alt="Manny">
         <div class="stress-header-text">
           <h2 class="stress-title">⚡ STRESS TEST</h2>
           <p class="stress-subtitle">Graphic Design Intern Manny needs you to hit quota — NOW.</p>
@@ -246,7 +246,7 @@
       </div>
 
       <div class="stress-clicker-area" id="stress-clicker-area">
-        <img id="stress-hand-img" src="minigame/click_frame1.png" class="stress-hand-anim" alt="">
+        <img id="stress-hand-img" src="assets/minigame/click_frame1.png" class="stress-hand-anim" alt="">
         <button id="stress-click-btn" class="stress-click-btn">CLICK!</button>
       </div>
 
@@ -267,6 +267,6 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
-  <script src="script.js?v=55"></script>
+  <script src="script.js?v=54"></script>
 </body>
 </html>
