--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
               <div class="skill-level">???</div>
             </div>
 
-          </div>
+</div>
+          <button id="btn-open-skill-tree" class="vapor-btn" style="width:100%; margin-top:10px; font-size:1.2rem; background:linear-gradient(90deg, #4a2070, #9f00ff);">🌲 VIEW SKILL TREE</button>
         </div>
 
         <div class="action-buttons">
