--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
   <div id="firewall-game-overlay"></div>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="script.js?v=60"></script>
 </body>
 </html>
