--- a/index.html
+++ b/index.html
@@ -143,9 +143,25 @@
           <div id="skill-grid">
             <div class="skill-slot skill-active" id="skill-phishing">
               <div class="skill-icon">🎣</div><div class="skill-label">Phishing</div><div class="skill-level">Lv.1</div>
+              <div class="milestone-tip">
+                <div class="milestone-row" id="ms-phish-5">💌 Lv.5 — +1% Crit</div>
+                <div class="milestone-row" id="ms-phish-10">📧 Lv.10 — +2% Loot Rate</div>
+                <div class="milestone-row" id="ms-phish-15">🪝 Lv.15 — +1% Crit</div>
+                <div class="milestone-row" id="ms-phish-20">💻 Lv.20 — +2% Loot Rate</div>
+                <div class="milestone-row" id="ms-phish-25">🕸️ Lv.25 — +2% Crit</div>
+                <div class="milestone-row" id="ms-phish-30">🏴‍☠️ Lv.30 — +1% Legendary</div>
+              </div>
             </div>
             <div class="skill-slot skill-active" id="skill-firewall">
-              <div class="skill-icon">🛡️</div><div class="skill-label">Firewall</div><div class="skill-level">Lv.2</div>
+              <div class="skill-icon">🛡️</div><div class="skill-label">Firewall</div><div class="skill-level">Lv.1</div>
+              <div class="milestone-tip">
+                <div class="milestone-row" id="ms-fire-5">🧱 Lv.5 — +1% Armor Pierce</div>
+                <div class="milestone-row" id="ms-fire-10">🔒 Lv.10 — +2% Dash Coins</div>
+                <div class="milestone-row" id="ms-fire-15">🛡️ Lv.15 — +1% Armor Pierce</div>
+                <div class="milestone-row" id="ms-fire-20">🌐 Lv.20 — +2% Dash Coins</div>
+                <div class="milestone-row" id="ms-fire-25">🔥 Lv.25 — +2% Armor Pierce</div>
+                <div class="milestone-row" id="ms-fire-30">💾 Lv.30 — +2% Frenzy Cap</div>
+              </div>
             </div>
             <div class="skill-slot skill-locked"><div class="skill-icon">💾</div><div class="skill-label">Recovery</div><div class="skill-level">???</div></div>
             <div class="skill-slot skill-locked"><div class="skill-icon">🔐</div><div class="skill-label">Encryption</div><div class="skill-level">???</div></div>
@@ -238,6 +254,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="script.js?v=60"></script>
 </body>
 </html>
